--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ margin-bottom: -26px;
 .logo{
   height: 50px;
   width: auto;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 header{
@@ -55,7 +57,7 @@ position: fixed;
 .col2{
   float: left;
   width: 50%;
-  height: 300vh;
+  height: 500vh;
   margin-left: 50vw;
   padding: 10px 40px;
   margin-top: 8vh;
@@ -98,4 +100,26 @@ position: fixed;
   color: white;
   margin-right: 40px;
   margin-top: -60px;
+}
+
+.contact-formular{
+  margin-top: 70px;
+}
+
+.contact-formular-row{
+  background-color: #f2f2f2;
+  border: thin solid #d9d9d9;
+  width: 100%;
+  height: 50px;
+  padding: 2px 15px;
+  margin-top: 10px;
+}
+
+.contact-formular-row-message{
+  background-color: #f2f2f2;
+  border: thin solid #d9d9d9;
+  width: 100%;
+  height: 200px;
+  padding: 2px 15px;
+  margin-top: 10px;
 }
