--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ position: fixed;
   height: 50px;
   padding: 2px 15px;
   margin-top: 10px;
+  letter-spacing: 1px;
 }
 
 .contact-formular-row-message{
@@ -120,6 +121,8 @@ position: fixed;
   border: thin solid #d9d9d9;
   width: 100%;
   height: 200px;
-  padding: 2px 15px;
+  padding: 15px 15px;
   margin-top: 10px;
+  resize: none;
+  letter-spacing: 1px;
 }
